fix vertical scroll on mobile

--- a/src/components/Heading/Heading.module.scss
+++ b/src/components/Heading/Heading.module.scss
@@ -1,5 +1,5 @@
 .Heading {
-  margin-bottom: 84px;
+  margin: 64px 0 84px;
 
   h1 {
     font-size: 2.8em;
@@ -8,6 +8,8 @@
 
 @media screen and (min-width: 768px) {
   .Heading {
+    margin: 120px 0 84px;
+
     h1 {
       font-size: 3.2em;
     }
